# TerminalsThisWay

./: .gitignore  CMakeLists.txt  README.md  install.sh  mingw-linux-toolchain.cmake
buildLinux/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
buildMinGw/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
buildMinGw/command/: Makefile  cmake_install.cmake
buildMinGw/ttw/: Makefile  cmake_install.cmake
cmake/Modules/: NSIS.InstallOptions.ini.in  NSIS.template.in
cmake/Templates/: CPackConfig.cmake
command/: CMakeLists.txt  application.cpp  application.h  main.cpp
res/: app_icon.aps  app_icon.rc
src/: application.h  main.cpp  version.h  version.h.in
src/linux/: Terminal.cpp  application.cpp
src/linux/x11/: ParameterInputWindow.cpp  ParameterInputWindow.h  main_xlib.cpp
src/win/: application.cpp  chooseFolder.cpp  chooseFolder.h  getText.cpp  getText.h  terminal.cpp  terminal.h  uiAutomation.cpp  uiAutomation.h  updater.cpp  updater.h
src/win/Config/: config.h  configManager.cpp  configManager.h
src/win/Utility/: utility.cpp  utility.h
src/win/Window/: about.cpp  about.h  chooseFolder.cpp  chooseFolder.h  localization.cpp  localization.h  modalWindow.cpp  modalWindow.h  parameterInputWindow.cpp  parameterInputWindow.h  settings.cpp  settings.h  trayWindow.cpp  trayWindow.h
src/win/Window/GUI/: button.cpp  button.h  dropdown.cpp  dropdown.h  image.cpp  image.h  inputField.cpp  inputField.h  inputKeyBind.cpp  inputKeyBind.h  text.cpp  text.h  toggle.cpp  toggle.h
ttw/: CMakeLists.txt  application.h  main.cpp  version.h  version.h.in
ttw/linux/: Terminal.h  ]  application.cpp  log.cpp  log.h
ttw/linux/x11/: ParameterInputWindow.h  main_xlib.cpp  main_xlib.h  xlib_helper.cpp  xlib_helper.h
ttw/win/: application.cpp  bringToTop.cpp  bringToTop.h  getHighlightedText.cpp  getHighlightedText.h  getText.cpp  getText.h  simulating.cpp  simulating.h  terminal.cpp  terminal.h  updater.cpp  updater.h
ttw/win/Config/: config.h  configManager.cpp  configManager.h
ttw/win/Utility/: utility.cpp  utility.h
ttw/win/Window/: about.cpp  about.h  chooseFolder.cpp  chooseFolder.h  modalWindow.cpp  modalWindow.h  parameterInputWindow.cpp  parameterInputWindow.h  settings.cpp  settings.h  trayWindow.cpp  trayWindow.h  updateFoundWindow.cpp  updateFoundWindow.h
ttw/win/Window/GUI/: button.cpp  button.h  image.cpp  image.h  inputField.cpp  inputField.h  inputKeyBind.cpp  inputKeyBind.h  text.cpp  text.h  toggle.cpp  toggle.h
